<resources>
    <string name="app_name">Sirius</string>
    <string name="game_name">DoTA 2</string>
    <string name="rev_short">70M</string>
    <string name="rev_long">70M Reviews</string>
    <string name="moba">MOBA</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="strategy">STRATEGY</string>
    <string name="description">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient", whilst defending their own.</string>
    <string name="rate_label">Review &amp; Ratings</string>
    <string name="rate_num">4.9</string>
    <string name="name1">Auguste Conte</string>
    <string name="name2">Jang Marcelino</string>
    <string name="date1">February 14, 2019</string>
    <string name="date2">February 14, 2019</string>
    <string name="text1">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="text2">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="install">Install</string>
</resources>