<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">

        <ImageView
            android:id="@+id/main_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/img_background"
            android:scaleType="centerCrop"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back"
            android:background="@drawable/white_transparent_bg"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:padding="12dp"
            android:src="@drawable/ic_more"
            android:background="@drawable/white_transparent_bg"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="-50dp"
            android:src="@drawable/img_logo"
            android:scaleX="1.3"
            android:scaleY="1.3"
            app:layout_constraintTop_toBottomOf="@id/main_img"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="-15dp"
            android:text="@string/game_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/sk_modernist_bold"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/main_img"/>

        <RatingBar
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:numStars="5"
            android:rating="5"
            android:progressTint="@color/rating"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintTop_toBottomOf="@id/game_name"
            app:layout_constraintStart_toStartOf="@id/game_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/rev_short"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="@id/rate"
            app:layout_constraintStart_toEndOf="@id/rate"
            app:layout_constraintBottom_toBottomOf="@id/rate"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moba"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"
                android:backgroundTint="@color/tags_bg"
                android:textColor="@color/mms_color"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplayer"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"
                android:backgroundTint="@color/tags_bg"
                android:textColor="@color/mms_color" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strategy"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"
                android:backgroundTint="@color/tags_bg"
                android:textColor="@color/mms_color" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/sk_modernist_regular"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/tags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/review_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/rate_label"
            android:textSize="20sp"
            android:fontFamily="@font/sk_modernist_bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rate_num"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:fontFamily="@font/sk_modernist_bold"
            app:layout_constraintTop_toBottomOf="@id/review_label"
            app:layout_constraintStart_toStartOf="@id/review_label"/>

        <RatingBar
            android:id="@+id/rate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="22dp"
            android:numStars="5"
            android:rating="5"
            android:progressTint="@color/rating"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintTop_toTopOf="@id/rating"
            app:layout_constraintStart_toEndOf="@id/rating"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rev_long"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:alpha="0.5"
            android:fontFamily="@font/sk_modernist_regular"
            app:layout_constraintTop_toBottomOf="@id/rate2"
            app:layout_constraintStart_toStartOf="@id/rate2"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="8dp"
            android:background="@color/separator_color"
            app:layout_constraintTop_toBottomOf="@id/rating"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_img1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_user_1"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/name1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sk_modernist_regular"
            app:layout_constraintStart_toEndOf="@id/profile_img1"
            app:layout_constraintTop_toTopOf="@id/profile_img1"/>

        <TextView
            android:id="@+id/date_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="22dp"
            android:text="@string/date1"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:alpha="0.4"
            android:fontFamily="@font/sk_modernist_regular"
            app:layout_constraintStart_toEndOf="@id/profile_img1"
            app:layout_constraintTop_toBottomOf="@id/name_1"/>

        <TextView
            android:id="@+id/text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:alpha="0.7"
            android:fontFamily="@font/sk_modernist_regular"
            app:layout_constraintStart_toEndOf="@id/profile_img1"
            app:layout_constraintTop_toBottomOf="@id/profile_img1"/>



        <androidx.cardview.widget.CardView
            android:id="@+id/profile_img2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/text_1"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_user_2"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/name2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sk_modernist_regular"
            app:layout_constraintStart_toEndOf="@id/profile_img2"
            app:layout_constraintTop_toTopOf="@id/profile_img2"/>

        <TextView
            android:id="@+id/date_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="22dp"
            android:text="@string/date2"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:alpha="0.4"
            android:fontFamily="@font/sk_modernist_regular"
            app:layout_constraintStart_toEndOf="@id/profile_img2"
            app:layout_constraintTop_toBottomOf="@id/name_2"/>

        <TextView
            android:id="@+id/text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text2"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:alpha="0.7"
            android:fontFamily="@font/sk_modernist_regular"
            app:layout_constraintStart_toEndOf="@id/profile_img2"
            app:layout_constraintTop_toBottomOf="@id/profile_img2"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/install"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="13dp"
            app:backgroundTint="@color/button_color"
            android:fontFamily="@font/sk_modernist_bold"
            app:layout_constraintTop_toBottomOf="@id/text_2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>